--- a/src/App.css
+++ b/src/App.css
@@ -34,13 +34,13 @@ button {
   display: flex;
   flex-direction: column;
   justify-content: center;
-  background: radial-gradient(
+  /* background: radial-gradient(
     ellipse at left bottom,
     rgba(22, 24, 47, 1) 0%,
     rgba(38, 20, 72, 0.9) 59%,
     rgba(17, 27, 75, 0.9) 100%
-  );
-  /* background-color: #ff7b00; */
+  ); */
+  background-color: #F42F0F;
   box-shadow: 0 50px 70px -20px rgba(0, 0, 0, 0.8);
 }
 
