--- a/src/App.css
+++ b/src/App.css
@@ -1,11 +1,42 @@
 * {
-  box-sizing: border-box;
+  /* box-sizing: border-box;
   margin: 0;
-  padding: 0;
+  padding: 0; */
   font-family: "Nunito", sans-serif;
 }
 
-button {
+.hero {
+  width: 100%;
+  min-height: 100vh;
+  background: radial-gradient(
+    ellipse at left bottom,
+    rgba(22, 24, 47, 1) 0%,
+    rgba(38, 20, 72, 0.9) 59%,
+    rgba(17, 27, 75, 0.9) 100%
+  );
+}
+
+.hero nav {
+  background: #603bbb;
+  width: 100%;
+  padding: 20px 40px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.hero nav h2 {
+  color: #fff;
+}
+
+.hero nav button {
+  width: 86px;
+  padding: 8px 0;
+  background: #3a2b58;
+}
+
+
+/* button {
   border: none;
   outline: none;
   width: 100%;
@@ -34,14 +65,8 @@ button {
   display: flex;
   flex-direction: column;
   justify-content: center;
-  /* background: radial-gradient(
-    ellipse at left bottom,
-    rgba(22, 24, 47, 1) 0%,
-    rgba(38, 20, 72, 0.9) 59%,
-    rgba(17, 27, 75, 0.9) 100%
-  ); */
-  background-color: #F42F0F;
-  box-shadow: 0 50px 70px -20px rgba(0, 0, 0, 0.8);
+  background-color: #FFFFFF;
+  box-shadow: 0 50px 70px -20px rgba(0, 0, 0, 10%);
 }
 
 .login .loginContainer label {
@@ -90,34 +115,4 @@ button {
 .login .loginContainer .errorMsg {
   color: red;
   font-size: 16px;
-}
-
-.hero {
-  width: 100%;
-  min-height: 100vh;
-  background: radial-gradient(
-    ellipse at left bottom,
-    rgba(22, 24, 47, 1) 0%,
-    rgba(38, 20, 72, 0.9) 59%,
-    rgba(17, 27, 75, 0.9) 100%
-  );
-}
-
-.hero nav {
-  background: #603bbb;
-  width: 100%;
-  padding: 20px 40px;
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-}
-
-.hero nav h2 {
-  color: #fff;
-}
-
-.hero nav button {
-  width: 86px;
-  padding: 8px 0;
-  background: #3a2b58;
-}
+} */
