--- a/src/components/login/Login.css
+++ b/src/components/login/Login.css
@@ -3,7 +3,12 @@
     min-height: 100vh;
     padding: 0 20px;
     background: #FFFFFF;
-    display: flex;;
+    display: flex;
+    background:url('../images/welcome.png');
+    background-repeat :no-repeat;
+    background-position: bottom left;
+    background-size:30%;
+    
 }
 
 .login .login-form{
@@ -27,3 +32,4 @@
 .login .login-form .use-button{
     color: #0052CC;
 }
+ 
